frontend dashboard logic and ingredient crud UI added
