# Dtos/PizzaDto.cs
@@ -8,6 +8,6 @@ namespace PizzaManager.Dtos
         public string name {get;set;}
         public string pizza_dough_type {get;set;}
         public bool is_calzone {get;set;}
-        public List<string> ingredients {get;set;}
+        public List<IngredientDto> ingredients {get;set;}
     }
 }
